# Stream-Scholar-contracts

./: .env.example  .gitignore  BOUNTY_IMPLEMENTATION_SUMMARY.md  COMPLETION_SUMMARY.md  CONTRIBUTING.md  Cargo.toml  IMPLEMENTATION_DOCS.md  MULTI_SIG_ACADEMIC_BOARD_REVIEW.md  PR_DESCRIPTION.md  PR_DESCRIPTION_GPA_BONUS.md  PR_DESCRIPTION_NEW.md  PR_TEMPLATE.md  PULL_REQUEST_DESCRIPTION.md  README.md  package-lock.json  package.json  pr_description.md  pr_description_new.md  webpack.config.js
contracts/scholar_contracts/: Cargo.toml
contracts/scholar_contracts/src/: Timelock  dark_pool.rs  lib.rs  student_profile_nft.rs  test.rs  tuition_stipend_split_tests.rs
contracts/scholar_contracts/test_snapshots/test/: test_admin_veto.1.json  test_allow_same_session.1.json  test_allow_session_reset_after_timeout.1.json  test_book_stipend_voucher_flow.1.json  test_book_stipend_voucher_unauthorized_bookstore.1.json  test_calculate_remaining_airtime.1.json  test_calculate_remaining_airtime_zero_flow_rate.1.json  test_clawback_detection_and_handling.1.json  test_cross_contract_reputation_query.1.json  test_dynamic_pricing.1.json  test_emergency_pause_blocks_operations.1.json  test_flash_loan_defense_blocks_instant_withdrawal.1.json  test_global_course_veto.1.json  test_gpa_verification_expired.1.json  test_gpa_verification_flow.1.json  test_learning_velocity_score_flow.1.json  test_mega_donor_kyc_success.1.json  test_minimum_deposit.1.json  test_no_clawback_normal_operation.1.json  test_prevent_session_sharing.1.json  (+11 more)
fuzz/: Cargo.toml
fuzz/fuzz_targets/: expiry_time_extremes.rs
(+26 files in other folders)
